snapshots/tests/invalid_syntax/invalid_control_flow/stop_with_arguments_failures.snap
---
source: vb6parse/tests/invalid_syntax/invalid_control_flow.rs
expression: failure_messages
---
[]
